# cmkizer

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  conanfile.txt
cmake/: code-coverage.cmake
src/: dsp.cpp  dsp.hpp  dsw.cpp  dsw.hpp  file_parser.cpp  file_parser.hpp  generators.cpp  generators.hpp  main.cpp  proj.cpp  proj.hpp  sln.cpp  sln.hpp  type_defs.hpp  util.cpp  util.hpp  vfproj.cpp  vfproj.hpp  xproj.cpp  xproj.hpp
